// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SuggestedOwners render() should not show owners committers without featureflag 1`] = `
<SuggestedOwners
  event={
    Object {
      "eventID": "12345678901234567890123456789012",
      "groupID": "1",
      "id": "1",
      "message": "ApiException",
    }
  }
>
  <div
    className="m-b-1"
  >
    <h6>
      <span>
        Suggested Assignees
      </span>
      <small
        style={
          Object {
            "background": "#FFFFFF",
          }
        }
      >
        Click to assign
      </small>
    </h6>
    <div
      className="avatar-grid"
    >
      <span
        className="avatar-grid-item"
        key="1:user"
        onClick={[Function]}
        style={
          Object {
            "cursor": "pointer",
          }
        }
      >
        <Tooltip
          title="<div><div class=\\"tooltip-owners-name\\">Jane Doe</div><ul class=\\"tooltip-owners-commits\\">Assigned based on your Project&#x27;s Issue Ownership settings</ul><ul class=\\"tooltip-owners-commits\\">path matched: sentry/tagstore/*</ul></div>"
          tooltipOptions={
            Object {
              "container": "body",
              "html": true,
              "template": "<div class=\\"tooltip\\" role=\\"tooltip\\"><div class=\\"tooltip-arrow\\"></div><div class=\\"tooltip-inner tooltip-owners\\"></div></div>",
            }
          }
        >
          <ActorAvatar
            actor={
              Object {
                "id": "1",
                "name": "Jane Doe",
                "type": "user",
              }
            }
            className="tip"
            hasTooltip={false}
            title="<div><div class=\\"tooltip-owners-name\\">Jane Doe</div><ul class=\\"tooltip-owners-commits\\">Assigned based on your Project&#x27;s Issue Ownership settings</ul><ul class=\\"tooltip-owners-commits\\">path matched: sentry/tagstore/*</ul></div>"
          >
            <Avatar
              className="tip"
              hasTooltip={false}
              title="<div><div class=\\"tooltip-owners-name\\">Jane Doe</div><ul class=\\"tooltip-owners-commits\\">Assigned based on your Project&#x27;s Issue Ownership settings</ul><ul class=\\"tooltip-owners-commits\\">path matched: sentry/tagstore/*</ul></div>"
              user={
                Object {
                  "email": "janedoe@example.com",
                  "id": "1",
                  "name": "Jane Doe",
                }
              }
            >
              <UserAvatar
                className="tip"
                gravatar={false}
                hasTooltip={false}
                title="<div><div class=\\"tooltip-owners-name\\">Jane Doe</div><ul class=\\"tooltip-owners-commits\\">Assigned based on your Project&#x27;s Issue Ownership settings</ul><ul class=\\"tooltip-owners-commits\\">path matched: sentry/tagstore/*</ul></div>"
                user={
                  Object {
                    "email": "janedoe@example.com",
                    "id": "1",
                    "name": "Jane Doe",
                  }
                }
              >
                <BaseAvatar
                  className="tip"
                  gravatarId="janedoe@example.com"
                  hasTooltip={false}
                  letterId="janedoe@example.com"
                  round={true}
                  style={Object {}}
                  title="Jane Doe"
                  tooltip="Jane Doe (janedoe@example.com)"
                  type="letter_avatar"
                  uploadPath="avatar"
                >
                  <Tooltip
                    disabled={true}
                    title="Jane Doe (janedoe@example.com)"
                  >
                    <StyledBaseAvatar
                      className="avatar tip"
                      round={true}
                      style={Object {}}
                    >
                      <span
                        className="avatar tip css-1ttlt2k-StyledBaseAvatar e1z0ohzl0"
                        style={Object {}}
                      >
                        <LetterAvatar
                          displayName="Jane Doe"
                          identifier="janedoe@example.com"
                          round={true}
                        >
                          <Svg
                            round={true}
                            viewBox="0 0 120 120"
                          >
                            <svg
                              className="css-1r4mnb9-Svg e1knxa8x0"
                              viewBox="0 0 120 120"
                            >
                              <rect
                                fill="#f868bc"
                                height="120"
                                rx="15"
                                ry="15"
                                width="120"
                                x="0"
                                y="0"
                              />
                              <text
                                fill="#FFFFFF"
                                fontSize="65"
                                style={
                                  Object {
                                    "dominantBaseline": "central",
                                  }
                                }
                                textAnchor="middle"
                                x="50%"
                                y="50%"
                              >
                                JD
                              </text>
                            </svg>
                          </Svg>
                        </LetterAvatar>
                      </span>
                    </StyledBaseAvatar>
                  </Tooltip>
                </BaseAvatar>
              </UserAvatar>
            </Avatar>
          </ActorAvatar>
        </Tooltip>
      </span>
    </div>
  </div>
  <div
    className="m-b-1"
  >
    <h6>
      <GuideAnchor
        target="owners"
        type="text"
      >
        <GuideAnchorContainer
          innerRef={[Function]}
          type="text"
        >
          <div
            className="css-9u5for-GuideAnchorContainer e130o4350"
            type="text"
          >
            <StyledGuideAnchor
              active={false}
              className="guide-anchor-ping owners"
            >
              <div
                className="guide-anchor-ping owners css-1yndvnf-StyledGuideAnchor e130o4351"
              >
                <StyledGuideAnchorRipples>
                  <div
                    className="css-3zj3g7-StyledGuideAnchorRipples e130o4352"
                  />
                </StyledGuideAnchorRipples>
              </div>
            </StyledGuideAnchor>
          </div>
        </GuideAnchorContainer>
      </GuideAnchor>
      <span>
        Ownership Rules
      </span>
    </h6>
    <a
      className="btn btn-default btn-sm btn-create-ownership-rule"
      onClick={[Function]}
    >
      Create Ownership Rule
    </a>
  </div>
</SuggestedOwners>
`;

exports[`SuggestedOwners render() should show owners when enable 1`] = `
<SuggestedOwners
  event={
    Object {
      "eventID": "12345678901234567890123456789012",
      "groupID": "1",
      "id": "1",
      "message": "ApiException",
    }
  }
>
  <div
    className="m-b-1"
  >
    <h6>
      <span>
        Suggested Assignees
      </span>
      <small
        style={
          Object {
            "background": "#FFFFFF",
          }
        }
      >
        Click to assign
      </small>
    </h6>
    <div
      className="avatar-grid"
    >
      <span
        className="avatar-grid-item"
        key="1:user"
        onClick={[Function]}
        style={
          Object {
            "cursor": "pointer",
          }
        }
      >
        <Tooltip
          title="<div><div class=\\"tooltip-owners-name\\">Jane Doe</div><ul class=\\"tooltip-owners-commits\\">Assigned based on your Project&#x27;s Issue Ownership settings</ul><ul class=\\"tooltip-owners-commits\\">path matched: sentry/tagstore/*</ul></div>"
          tooltipOptions={
            Object {
              "container": "body",
              "html": true,
              "template": "<div class=\\"tooltip\\" role=\\"tooltip\\"><div class=\\"tooltip-arrow\\"></div><div class=\\"tooltip-inner tooltip-owners\\"></div></div>",
            }
          }
        >
          <ActorAvatar
            actor={
              Object {
                "id": "1",
                "name": "Jane Doe",
                "type": "user",
              }
            }
            className="tip"
            hasTooltip={false}
            title="<div><div class=\\"tooltip-owners-name\\">Jane Doe</div><ul class=\\"tooltip-owners-commits\\">Assigned based on your Project&#x27;s Issue Ownership settings</ul><ul class=\\"tooltip-owners-commits\\">path matched: sentry/tagstore/*</ul></div>"
          >
            <Avatar
              className="tip"
              hasTooltip={false}
              title="<div><div class=\\"tooltip-owners-name\\">Jane Doe</div><ul class=\\"tooltip-owners-commits\\">Assigned based on your Project&#x27;s Issue Ownership settings</ul><ul class=\\"tooltip-owners-commits\\">path matched: sentry/tagstore/*</ul></div>"
              user={
                Object {
                  "email": "janedoe@example.com",
                  "id": "1",
                  "name": "Jane Doe",
                }
              }
            >
              <UserAvatar
                className="tip"
                gravatar={false}
                hasTooltip={false}
                title="<div><div class=\\"tooltip-owners-name\\">Jane Doe</div><ul class=\\"tooltip-owners-commits\\">Assigned based on your Project&#x27;s Issue Ownership settings</ul><ul class=\\"tooltip-owners-commits\\">path matched: sentry/tagstore/*</ul></div>"
                user={
                  Object {
                    "email": "janedoe@example.com",
                    "id": "1",
                    "name": "Jane Doe",
                  }
                }
              >
                <BaseAvatar
                  className="tip"
                  gravatarId="janedoe@example.com"
                  hasTooltip={false}
                  letterId="janedoe@example.com"
                  round={true}
                  style={Object {}}
                  title="Jane Doe"
                  tooltip="Jane Doe (janedoe@example.com)"
                  type="letter_avatar"
                  uploadPath="avatar"
                >
                  <Tooltip
                    disabled={true}
                    title="Jane Doe (janedoe@example.com)"
                  >
                    <StyledBaseAvatar
                      className="avatar tip"
                      round={true}
                      style={Object {}}
                    >
                      <span
                        className="avatar tip css-1ttlt2k-StyledBaseAvatar e1z0ohzl0"
                        style={Object {}}
                      >
                        <LetterAvatar
                          displayName="Jane Doe"
                          identifier="janedoe@example.com"
                          round={true}
                        >
                          <Svg
                            round={true}
                            viewBox="0 0 120 120"
                          >
                            <svg
                              className="css-1r4mnb9-Svg e1knxa8x0"
                              viewBox="0 0 120 120"
                            >
                              <rect
                                fill="#f868bc"
                                height="120"
                                rx="15"
                                ry="15"
                                width="120"
                                x="0"
                                y="0"
                              />
                              <text
                                fill="#FFFFFF"
                                fontSize="65"
                                style={
                                  Object {
                                    "dominantBaseline": "central",
                                  }
                                }
                                textAnchor="middle"
                                x="50%"
                                y="50%"
                              >
                                JD
                              </text>
                            </svg>
                          </Svg>
                        </LetterAvatar>
                      </span>
                    </StyledBaseAvatar>
                  </Tooltip>
                </BaseAvatar>
              </UserAvatar>
            </Avatar>
          </ActorAvatar>
        </Tooltip>
      </span>
    </div>
  </div>
</SuggestedOwners>
`;
